--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
-matrix:
+stages:
+  - Test
+  - name: Deploy
+    if: branch = master
+jobs:
   include:
-  - language: go
+  - stage: Test
+    name: "Test Gobuild, Golint and Gotest"
+    language: go
     go:
-    - 1.10.3
+      - 1.10.3
     install:
     - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.16.0
     script:
     - make gobuild golint gotest
 
-  - language: node_js
+  - stage: Test
+    name: "Test web react build, lint and test"
+    language: node_js
     node_js:
     - '10'
     cache:
@@ -18,3 +26,14 @@ matrix:
     install: cd web/react && yarn --frozen-lockfile --non-interactive || (echo 'package.json is not in sync with yarn.lock, check that you include yarn.lock' && false)
     script:
     - yarn build && yarn lint && yarn test
+  - stage: Deploy
+    name: Github Pages
+    install: skip
+    script:
+      - yarn build:storybook
+      - cd .out
+      - git init
+      - git add .
+      - git commit -m "Deploy to Github Pages"
+      - git push --force --quiet "https://${GITHUB_TOKEN}@$github.com/${GITHUB_REPO}.git" master:gh-pages > /dev/null 2>&1
+
